test/errors/python_generator_error/zs/top_level_package_clashing/top_level_package_typing_clash_error.zs
package top_level_package_clashing.top_level_package_typing_clash_error;

struct Test
{
    uint32 field;  
};
